# nmea_navsat_driver

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE.txt  package.xml  setup.cfg  setup.py
.github/workflows/: ci.yaml
config/: nmea_navsat_diags.yaml  nmea_serial_driver.yaml  nmea_socket_driver.yaml  nmea_tcpclient_driver.yaml
doc/: conf.py  index.rst  libnmea_navsat_driver.nodes.rst  libnmea_navsat_driver.rst  modules.rst
launch/: config.yaml  nmea_navsat_driver.launch  nmea_serial_driver.launch  nmea_serial_driver.launch.py  nmea_serial_driver_launch.py  nmea_socket_driver.launch  nmea_socket_driver.launch.py  nmea_tcpclient_driver.launch.py  nmea_topic_driver.launch
libnmea_navsat_driver/: driver.py
libnmea_navsat_driver/nodes/: nmea_serial_driver.py  nmea_socket_driver.py  nmea_topic_driver.py  nmea_topic_serial_reader.py
nmea_msg/: CMakeLists.txt  package.xml
nmea_msg/msg/: Sentence.msg
nmea_navsat_driver/: checksum_utils.py  driver.py
nmea_navsat_driver/nodes/: nmea_serial_driver.py  nmea_socket_driver.py  nmea_topic_driver.py  nmea_topic_serial_reader.py
scripts/: nmea_gpsd_driver  nmea_serial_driver  nmea_serial_driver.py  nmea_socket_driver  nmea_socket_driver.py  nmea_topic_driver  nmea_topic_driver.py  nmea_topic_serial_reader  nmea_topic_serial_reader.py
src/libnmea_navsat_driver/: __init__.py  checksum_utils.py  driver.py  parser.py
src/libnmea_navsat_driver/nodes/: __init__.py  nmea_serial_driver.py  nmea_socket_driver.py  nmea_tcpclient_driver.py  nmea_topic_driver.py  nmea_topic_serial_reader.py
test/: README.rst  requirements.txt  test_driver.py
test/configs/: config_launch.yaml  config_log.yaml  config_tester.yaml
