<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>nmea_navsat_driver</name>
    <version>2.0.0</version>
    <description>
        Package to parse NMEA strings and publish a very simple GPS message. Does not
        require or use the GPSD deamon.
    </description>

    <maintainer email="evenator@gmail.com">Ed Venator</maintainer>

    <license>BSD</license>

    <url type="website">http://ros.org/wiki/nmea_navsat_driver</url>

    <author email="eric@ericperko.com">Eric Perko</author>
    <author>Steven Martin</author>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nmea_msgs</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-serial</exec_depend>
    <exec_depend>tf_transformations</exec_depend>

    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
